[metadata]
name = contract-deploy-tools
url = https://github.com/trustlines-protocol/contract-deploy-tools
description = Compile, test and deploy smart contracts
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
license_file = LICENSE
keywords = ethereum compile test deploy
author = Trustlines-Network
author_email = contact@brainbot.com

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options.packages.find]
where=src

[options]
python_requires = >= 3.6
setup_requires = setuptools_scm
package_dir=
    =src
packages=find:

install_requires =
    py-solc
    web3>=5.0.0,<5.2
    eth-tester[py-evm]
    eth-utils
    eth-keyfile
    click

[options.entry_points]
console_scripts =
    deploy-tools=deploy_tools.cli:main

pytest11 =
    deploy-tools=deploy_tools.plugin

[options.extras_require]
dev =
    flake8
    mypy
    pytest
    setuptools_scm
    pip>=18.1
    black
    pre-commit

[flake8]
max-line-length = 120
ignore =
       # P101 format string does contain unindexed parameters
      P101
       # default:
       E121,E123,E126,E226,E24,E704,W503,W504
       # E203 is whitespace before ':',
       # black does it right, but flake8 wrongly complains
       E203

[tool:pytest]
addopts = --contracts-dir testcontracts
