[metadata]
name = contract-deploy-tools
url = https://github.com/trustlines-protocol/contract-deploy-tools
description = Compile, test and deploy smart contracts
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
license_file = LICENSE
keywords = ethereum compile test deploy
author = Trustlines-Network
author_email = contact@brainbot.com

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options.packages.find]
where=src

[options]
python_requires = >= 3.6
setup_requires = setuptools_scm
package_dir=
    =src
packages=find:

install_requires =
    py-solc-x
    web3>=5.21.0,<6.0.0
    eth-tester[py-evm]>=0.6.0b6
    eth-utils
    eth-keyfile
    click
    # eth-tester-rpc

[options.entry_points]
console_scripts =
    deploy-tools=deploy_tools.cli:main

pytest11 =
    deploy-tools=deploy_tools.plugin

[flake8]
max-line-length = 120
ignore =
       # P101 format string does contain unindexed parameters
      P101
       # default:
       E121,E123,E126,E226,E24,E704,W503,W504
       # E203 is whitespace before ':',
       # black does it right, but flake8 wrongly complains
       E203

[tool:pytest]
addopts = --contracts-dir testcontracts --expose-rpc=8545

[isort]
line_length=88
known_future_library=future
known_first_party=deploy_tools
default_section=THIRDPARTY
combine_as_imports=1
# black compatibility
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
